objects/Opportunity_Product_Delete_Capture__c.object
<CustomObject>
    <description>It will capture the opportunity product details when they get deleted.</description>
    <fields>
        <fullName>Business_Group__c</fullName>
        <description>It captures the busines group</description>
        <label>Business Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deleted_Record_Id__c</fullName>
        <description>@HP: used to capture deleted record id</description>
        <label>Deleted Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Deleted_Record_Object_Type__c</fullName>
        <description>@HP: used to capture object type of deleted record</description>
        <label>Deleted Record Object Type</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_Record_Parent_Id__c</fullName>
        <description>@HP: It represents Parent Opportunity ID of deleted record</description>
        <label>Deleted Record Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GBU__c</fullName>
        <label>GBU</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Ref_Id__c</fullName>
        <label>Legacy Ref Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Description__c</fullName>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <description>It captures the opportunity close date</description>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_Auto__c</fullName>
        <label>Opportunity ID - Auto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <label>Opportunity ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_PIL_ID__c</fullName>
        <label>Product PIL ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Price__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Product Delete Capture</label>
    <nameField>
        <label>Opportunity Product Delete Capture Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Product Delete Capture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>